--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <input type="number" name="text3" id="text3" min="1">
     </div>
     <div class="buttons">
-        <button class="button">Pridėti</button>
-        <button class="button">Ištrinti pirmą</button>
-        <button class="button">Ištrinti paskutinį</button>
+        <button class="button" id="add">Pridėti</button>
+        <button class="button" id="remove-first">Ištrinti pirmą</button>
+        <button class="button" id="remove-last">Ištrinti paskutinį</button>
     </div>
-    <table>
+    <table id="table">
         <tr>
             <th>VARDAS</th>
             <th>PAVARDĖ</th>
